reorganized and added a few files

--- a/Search algos/BFS.ipynb
+++ b/Search algos/BFS.ipynb
@@ -90,6 +90,58 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def bfs2():\n",
+        "    graph=getKeys()\n",
+        "    vis_q=[]\n",
+        "    q=[]\n",
+        "    print(\"\\nThe BFS result:\\n\")\n",
+        "    keys=list(graph.keys())\n",
+        "    q.append(keys[0])\n",
+        "    vis_q.append(keys[0])\n",
+        "    while(len(q)>0):\n",
+        "        temp=q.pop(0)\n",
+        "        print(temp,end=\" \")\n",
+        "        if (graph[temp])[0]!='0':\n",
+        "            for nodes in graph[temp]:\n",
+        "                if check(nodes,vis_q)==0:\n",
+        "                    q.append(nodes)\n",
+        "                    vis_q.append(nodes)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Adjacency list rep of graph:\n",
+            "\n",
+            "[ 1 ] -> ['2', '3'] \n",
+            "\n",
+            "[ 2 ] -> ['0'] \n",
+            "\n",
+            "[ 3 ] -> ['0'] \n",
+            "\n",
+            "\n",
+            "The BFS result:\n",
+            "\n",
+            "1 2 3 "
+          ]
+        }
+      ],
+      "source": [
+        "bfs2()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 8,
       "metadata": {
         "colab": {
